--- a/Parking/View/Base.lproj/Main.storyboard
+++ b/Parking/View/Base.lproj/Main.storyboard
@@ -19,14 +19,21 @@
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Kov-Kl-EhB" userLabel="Background">
                                 <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                             </imageView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="1125x2436-61eafdc42932e.jpg.pagespeed.ce.WcfDbBMKcO" translatesAutoresizingMaskIntoConstraints="NO" id="4O3-B5-K71">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                            </imageView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="CC0-Kx-SoA"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
                             <constraint firstItem="Kov-Kl-EhB" firstAttribute="leading" secondItem="CC0-Kx-SoA" secondAttribute="leading" id="4Ck-hE-u8M"/>
+                            <constraint firstItem="4O3-B5-K71" firstAttribute="top" secondItem="jkc-9J-SW9" secondAttribute="top" id="BYr-Ag-aT8"/>
                             <constraint firstAttribute="bottom" secondItem="Kov-Kl-EhB" secondAttribute="bottom" id="Hhv-i1-eJ6"/>
                             <constraint firstItem="Kov-Kl-EhB" firstAttribute="trailing" secondItem="CC0-Kx-SoA" secondAttribute="trailing" id="Jya-rF-ej1"/>
+                            <constraint firstItem="4O3-B5-K71" firstAttribute="trailing" secondItem="CC0-Kx-SoA" secondAttribute="trailing" id="O6O-hb-NVy"/>
+                            <constraint firstAttribute="bottom" secondItem="4O3-B5-K71" secondAttribute="bottom" id="T6z-nf-9UT"/>
                             <constraint firstItem="Kov-Kl-EhB" firstAttribute="top" secondItem="jkc-9J-SW9" secondAttribute="top" id="YIk-Vy-3do"/>
+                            <constraint firstItem="4O3-B5-K71" firstAttribute="leading" secondItem="CC0-Kx-SoA" secondAttribute="leading" id="obL-8A-qKx"/>
                         </constraints>
                     </view>
                     <tabBarItem key="tabBarItem" title="Item" id="n5a-1B-PUg"/>
@@ -35,7 +42,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Uuh-Sc-VgX" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2674" y="240"/>
+            <point key="canvasLocation" x="2673.913043478261" y="239.73214285714283"/>
         </scene>
         <!--Bike-->
         <scene sceneID="TRN-mS-IV6">
@@ -65,25 +72,40 @@
                                                         </constraints>
                                                     </imageView>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xkN-7r-DtH">
-                                                        <rect key="frame" x="50" y="0.0" width="284" height="40"/>
+                                                        <rect key="frame" x="50" y="0.0" width="254" height="40"/>
                                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                         <nil key="textColor"/>
                                                         <nil key="highlightedColor"/>
                                                     </label>
+                                                    <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="medium" translatesAutoresizingMaskIntoConstraints="NO" id="F8U-ee-fDK">
+                                                        <rect key="frame" x="314" y="0.0" width="20" height="40"/>
+                                                        <constraints>
+                                                            <constraint firstAttribute="width" constant="20" id="TbY-er-3e5"/>
+                                                            <constraint firstAttribute="width" secondItem="F8U-ee-fDK" secondAttribute="height" multiplier="1:2" id="Vib-io-NxL"/>
+                                                        </constraints>
+                                                        <color key="color" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                    </activityIndicatorView>
                                                 </subviews>
                                             </stackView>
                                             <stackView opaque="NO" contentMode="scaleToFill" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="fIZ-1r-FP8" userLabel="V2">
                                                 <rect key="frame" x="0.0" y="50" width="334" height="40"/>
                                                 <subviews>
-                                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="iGU-RF-eqW">
+                                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="615-pM-WQF">
                                                         <rect key="frame" x="0.0" y="0.0" width="40" height="40"/>
+                                                        <constraints>
+                                                            <constraint firstAttribute="width" secondItem="615-pM-WQF" secondAttribute="height" id="GgV-qv-VME"/>
+                                                            <constraint firstAttribute="width" constant="40" id="YfA-9p-s5c"/>
+                                                        </constraints>
+                                                    </imageView>
+                                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="iGU-RF-eqW">
+                                                        <rect key="frame" x="50" y="0.0" width="40" height="40"/>
                                                         <constraints>
                                                             <constraint firstAttribute="width" constant="40" id="8Jg-dD-XoC"/>
                                                             <constraint firstAttribute="width" secondItem="iGU-RF-eqW" secondAttribute="height" id="Grv-0t-Z31"/>
                                                         </constraints>
                                                     </imageView>
                                                     <searchBar contentMode="redraw" translatesAutoresizingMaskIntoConstraints="NO" id="Hfc-GU-tDe">
-                                                        <rect key="frame" x="50" y="0.0" width="284" height="40"/>
+                                                        <rect key="frame" x="100" y="0.0" width="234" height="40"/>
                                                         <textInputTraits key="textInputTraits"/>
                                                     </searchBar>
                                                 </subviews>
@@ -129,9 +151,11 @@
                     <connections>
                         <outlet property="backImageView" destination="XWl-pT-J9J" id="nBM-8B-eY7"/>
                         <outlet property="headerSubImageView" destination="iGU-RF-eqW" id="DPo-Pi-Rmv"/>
+                        <outlet property="headerSubReloader" destination="615-pM-WQF" id="2SO-qK-l5Z"/>
                         <outlet property="headerTopImageView" destination="D7z-yM-YcP" id="NoA-M2-gjI"/>
                         <outlet property="headerTopLabel" destination="xkN-7r-DtH" id="3ZS-gM-sae"/>
                         <outlet property="headerView" destination="jc0-an-Xce" id="W7b-ef-WMt"/>
+                        <outlet property="requestingIndicator" destination="F8U-ee-fDK" id="32U-yC-MA1"/>
                         <outlet property="searchBar" destination="Hfc-GU-tDe" id="pp9-lp-mNS"/>
                         <outlet property="tableView" destination="vla-7l-JWT" id="Omz-95-um9"/>
                     </connections>
@@ -168,25 +192,40 @@
                                                         </constraints>
                                                     </imageView>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="irV-bg-SQA">
-                                                        <rect key="frame" x="50" y="0.0" width="284" height="40"/>
+                                                        <rect key="frame" x="50" y="0.0" width="254" height="40"/>
                                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                         <nil key="textColor"/>
                                                         <nil key="highlightedColor"/>
                                                     </label>
+                                                    <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="medium" translatesAutoresizingMaskIntoConstraints="NO" id="mLQ-0L-OUL">
+                                                        <rect key="frame" x="314" y="0.0" width="20" height="40"/>
+                                                        <constraints>
+                                                            <constraint firstAttribute="width" constant="20" id="0uq-N5-hEb"/>
+                                                            <constraint firstAttribute="width" secondItem="mLQ-0L-OUL" secondAttribute="height" multiplier="1:2" id="Jao-Mm-oo9"/>
+                                                        </constraints>
+                                                        <color key="color" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                    </activityIndicatorView>
                                                 </subviews>
                                             </stackView>
                                             <stackView opaque="NO" contentMode="scaleToFill" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="iOx-Ov-gx2" userLabel="V2">
                                                 <rect key="frame" x="0.0" y="50" width="334" height="40"/>
                                                 <subviews>
-                                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="wgZ-2c-CyF">
+                                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="7uM-fN-FqD">
                                                         <rect key="frame" x="0.0" y="0.0" width="40" height="40"/>
+                                                        <constraints>
+                                                            <constraint firstAttribute="width" secondItem="7uM-fN-FqD" secondAttribute="height" id="cmK-rA-cvg"/>
+                                                            <constraint firstAttribute="width" constant="40" id="nHA-Ih-wdv"/>
+                                                        </constraints>
+                                                    </imageView>
+                                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="wgZ-2c-CyF">
+                                                        <rect key="frame" x="50" y="0.0" width="40" height="40"/>
                                                         <constraints>
                                                             <constraint firstAttribute="width" secondItem="wgZ-2c-CyF" secondAttribute="height" id="Sn0-FT-PQ3"/>
                                                             <constraint firstAttribute="width" constant="40" id="gYg-Ex-Ra8"/>
                                                         </constraints>
                                                     </imageView>
                                                     <searchBar contentMode="redraw" translatesAutoresizingMaskIntoConstraints="NO" id="32d-rQ-qgv">
-                                                        <rect key="frame" x="50" y="0.0" width="284" height="40"/>
+                                                        <rect key="frame" x="100" y="0.0" width="234" height="40"/>
                                                         <textInputTraits key="textInputTraits"/>
                                                     </searchBar>
                                                 </subviews>
@@ -234,9 +273,11 @@
                     <connections>
                         <outlet property="backImageView" destination="JGF-a0-g6E" id="wAX-kj-Xel"/>
                         <outlet property="headerSubImageView" destination="wgZ-2c-CyF" id="1pQ-gf-B49"/>
+                        <outlet property="headerSubReloader" destination="7uM-fN-FqD" id="yXw-2s-PuK"/>
                         <outlet property="headerTopImageView" destination="aNd-kC-HOX" id="RCc-bu-5GD"/>
                         <outlet property="headerTopLabel" destination="irV-bg-SQA" id="ADq-1K-V1m"/>
                         <outlet property="headerView" destination="YbB-Ke-wFq" id="FKF-sE-JEf"/>
+                        <outlet property="requestingIndicator" destination="mLQ-0L-OUL" id="Wtl-Uf-viw"/>
                         <outlet property="searchBar" destination="32d-rQ-qgv" id="S9y-Zc-8cd"/>
                         <outlet property="tableView" destination="EBl-Fs-drc" id="xV2-Zx-PnQ"/>
                     </connections>
